plugins {
    id 'java-library'
    id 'net.neoforged.moddev' version '2.0.141'
    id 'idea'
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

sourceSets.main.resources {
    srcDir('src/generated/resources')
    exclude("**/*.bbmodel")
    exclude("src/generated/**/.cache")
}

repositories {
    flatDir {
        dirs 'libs'
    }
    maven {
        url = uri("https://www.cursemaven.com")
        content {
            includeGroup("curse.maven")
        }
    }
    exclusiveContent {
        forRepository {
            maven {
                url = "https://maven.ryanhcode.dev/releases"
                name = "RyanHCode Maven"
            }
        }
        filter {
            includeGroup("dev.ryanhcode.sable")
            includeGroup("dev.ryanhcode.sable-companion")
        }
    }
    maven {
        url = "https://maven.tterrag.com/"
    }
    maven {
        url = "https://maven.createmod.net/"
    }
    maven {
        url = "https://api.modrinth.com/maven"
        content {
            includeGroup("maven.modrinth")
        }
    }
    maven {
        url = "https://maven.blamejared.com/"
    }
}

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
    version = project.neo_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    runs {
        client {
            client()
            jvmArgument '-Xmx25G'
            systemProperty 'neoforge.enabledGameTestNamespaces', "${project.mod_id},${project.abyss_mod_id},${project.high_seas_mod_id}"
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', "${project.mod_id},${project.abyss_mod_id},${project.high_seas_mod_id}"
        }

        data {
            data()
            programArguments.addAll '--mod', "${project.mod_id},${project.abyss_mod_id}", '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    implementation "maven.modrinth:create:6.0.10+mc1.21.1"
    implementation "net.createmod.ponder:ponder-neoforge:1.0.82+mc1.21.1"
    implementation "dev.engine-room.flywheel:flywheel-neoforge-1.21.1:1.0.6"
    implementation "foundry.veil:veil-neoforge-1.21.1:3.6.2"
    compileOnly(name: 'aeronautics-neoforge-1.21.1-1.1.3')
    localRuntime "maven.modrinth:create-aeronautics:1sv6OtSz"
    compileOnly(name: 'simulated-neoforge-1.21.1-1.1.3')
    compileOnly "maven.modrinth:sable:1.2.2+mc1.21.1"
    compileOnly "maven.modrinth:sodium:mc1.21.1-0.6.13-neoforge"

    jarJar(api("dev.ryanhcode.sable-companion:sable-companion-common-${minecraft_version}:[${sable_companion_version},)")) {
        version {
            prefer project.sable_companion_version
        }
    }
    localRuntime "maven.modrinth:lithostitched:1.4.8-neoforge-1.21"
    implementation files("libs/sable-neoforge-1.21.1-1.2.2.jar")

    localRuntime "maven.modrinth:fusion-connected-textures:1.2.12-neoforge-mc1.21.1"
}

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
        minecraft_version      : minecraft_version,
        minecraft_version_range: minecraft_version_range,
        neo_version            : neo_version,
        neo_version_range      : neo_version_range,
        loader_version_range   : loader_version_range,
        sable_version_range    : sable_version_range,
        mod_id                 : mod_id,
        mod_name               : mod_name,
        mod_license            : mod_license,
        mod_version            : mod_version,
        abyss_mod_id           : abyss_mod_id,
        abyss_mod_name         : abyss_mod_name,
        abyss_mod_version      : abyss_mod_version,
        high_seas_mod_id       : high_seas_mod_id,
        high_seas_mod_name     : high_seas_mod_name,
        high_seas_mod_version  : high_seas_mod_version,
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"

    doLast {
        def buildTimeFile = file("build/generated/sources/modMetadata/build_time.txt")
        buildTimeFile.text = String.valueOf(System.currentTimeMillis())
    }
}

sourceSets.main.resources.srcDir generateModMetadata
neoForge.ideSyncTask generateModMetadata

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
